@@ -1,7 +1,7 @@
 [Project]
 FileName=The Mana World.dev
 Name=tmw
-UnitCount=230
+UnitCount=234
 Type=0
 Ver=1
 ObjFiles=
@@ -2330,7 +2330,7 @@ BuildCmd=
 [Unit228]
 FileName=src\tmw.rc
 CompileCpp=1
-Folder=tmw
+Folder=Resources
 Compile=1
 Link=0
 Priority=1000
@@ -2356,4 +2356,44 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 CompileCpp=1
+
+[Unit231]
+FileName=src\resources\openglsdlimageloader.cpp
+CompileCpp=1
+Folder=resources
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit232]
+FileName=src\resources\openglsdlimageloader.h
+CompileCpp=1
+Folder=resources
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit233]
+FileName=src\animatedsprite.cpp
+CompileCpp=1
+Folder=
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit234]
+FileName=src\animatedsprite.h
+CompileCpp=1
+Folder=header
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
 
